--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,12 @@
 					<developmentVersion>1.0.1-SNAPSHOT</developmentVersion>
 					<autoVersionSubmodules>true</autoVersionSubmodules> -->
 				</configuration>
-			</plugin> 
+			</plugin>
+			<plugin>
+				<groupId>org.sonarsource.scanner.maven</groupId>
+				<artifactId>sonar-maven-plugin</artifactId>
+				<version>3.9.0.2155</version>
+			</plugin>			
 			<!-- Unit Testing Plugin 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
